change theme to naturewealth

--- a/wp-content/themes/naturewealth/style.css
+++ b/wp-content/themes/naturewealth/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Australis
+Theme Name: naturewealth
 Theme URI:
 Author: Tai LE
 Author URI: http://lhtai181.wordpress.com/
@@ -8,7 +8,7 @@ Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: company
-Text Domain: australis
+Text Domain: naturewealth
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */
